# Assignment2-GAIA-OpenAI-Evaluation-Tool

./: README.md
openai-evaluation-streamlit/: .dockerignore  .gitignore  README.md  docker-compose.yml  newapp.py  pyproject.toml
openai-evaluation-streamlit/Airflow_Docker_Pipeline/: Dockerfile  README.md  docker-compose.yaml
openai-evaluation-streamlit/Airflow_Docker_Pipeline/dags/: pymupdf_extraction_dag.py  textract_extraction_dag.py
openai-evaluation-streamlit/Airflow_Pipleline/: docker-compose.yaml
openai-evaluation-streamlit/Airflow_Pipleline/dags/: gaia_pdf_dag.py  pdf_processing_utils.py  s3_connection_test.dag.py  s3_utils.py  textract_processing.py
openai-evaluation-streamlit/backend/: Dockerfile  README.md  main.py  requirements.txt  setup_database.py
openai-evaluation-streamlit/backend/api_utils/: README.md  amazon_s3_utils.py  azure_sql_utils.py  chatgpt_utils.py
openai-evaluation-streamlit/backend/data_handling/: README.md  clone_repo.py  load_dataset.py
openai-evaluation-streamlit/backend/fast_api/: README.md  auth.py  db_endpoints.py  fast_main.py  gpt_endpoints.py  jwt_handler.py  pipeline_endpoints.py  s3_endpoints.py
openai-evaluation-streamlit/diagrams/: diagrams.ipynb
openai-evaluation-streamlit/docs/: Assignment2_OpenAI_Evaluation_App.docx
openai-evaluation-streamlit/scripts/: main.py  setup_database.py
openai-evaluation-streamlit/scripts/api_utils/: amazon_s3_utils.py  azure_sql_utils.py  chatgpt_utils.py
openai-evaluation-streamlit/scripts/data_handling/: clone_repo.py  delete_cache.py  file_processor.py
openai-evaluation-streamlit/scripts/fast_api/: auth.py  db_endpoints.py  fast_main.py  gpt_endpoints.py  jwt_handler.py  pipeline_endpoints.py  s3_endpoints.py
openai-evaluation-streamlit/streamlit-app/: Dockerfile  README.md  newapp.py  requirements.txt
openai-evaluation-streamlit/streamlit-app/streamlit_pages/: README.md  admin_dataset_management.py  admin_user_management.py  explore_questions.py  login_page.py  register_page.py  session_expired_page.py  test_questions.py  user_page.py  validation_questions.py  view_summary.py
openai-evaluation-streamlit/streamlit_pages/: admin_dataset_management.py  admin_page.py  admin_user_management.py  explore_questions.py  login_page.py  register_page.py  view_summary.py
