[tool.poetry]
name = "openai-evaluation-streamlit"
version = "0.1.0"
description = ""
authors = ["dharun-karthick-ramaraj <dharun.ramaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
streamlit = "1.25.0"
openai = "0.28"
boto3 = "^1.35.19"
pandas = "^2.2.3"
datasets = "^3.0.0"
huggingface-hub = "^0.24.7"
python-dotenv = "^1.0.1"
pymssql = "^2.3.1"
matplotlib = "^3.9.2"
bcrypt = "3.2.2"
diagrams = "^0.23.4"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-jose = "^3.3.0"
pydantic = "^2.9.2"
passlib = "^1.7.4"
pymupdf = "^1.24.11"
pyodbc = "^5.1.0"
sqlalchemy = "^2.0.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
